--- a/_output.yml
+++ b/_output.yml
@@ -1,18 +1,14 @@
 bookdown::gitbook:
-  css: style.css
   split_by: section
+  css: style.css
   config:
     toc:
       before: |
         <li><a href="./">Machine Learning A-Z</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    edit: https://github.com/USERNAME/REPO/edit/BRANCH/%s
-    download: ["pdf", "epub"]
-bookdown::pdf_book:
-  includes:
-    in_header: preamble.tex
-  latex_engine: pdflatex
-  citation_package: natbib
-  keep_tex: yes
-bookdown::epub_book: default
+    edit: https://github.com/murphymv/Machine-Learning-A-Z/edit/main/%s
+    sharing:
+      github: yes
+      facebook: no
+      twitter: no
